# DefensiveProtocol

./: .gitignore  LICENCE  README.md  client.py  handlers.py  protocol.py  registry.py  server.py
client/: CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  CryptoManager.cpp  CryptoManager.h  ProtocolBuilder.cpp  ProtocolBuilder.h  ProtocolParser.cpp  ProtocolParser.h  main.cpp
server/: client.py  handlers.py  protocol.py  registry.py  server.py
